--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -112,7 +112,7 @@
         <img src="https://vlsmlsaker.s3.amazonaws.com/assets/background/Ellipse%202.svg" alt="" class="ellipse1" />
 
         <div class="top">
-            <div class="typography">
+            <div class="typography" style="display: none;">
                 <h1 class="h1hero">Create<span class="highlight"> High-Converting Video Ads </span>Within An Hour – No
                     Video Editor Required
                 </h1>
@@ -121,6 +121,19 @@
                     Why leave your ad performance in someone else’s hands when you can do it yourself?<br>Introducing
                     VideoCrafter.io – the fastest, easiest way to create scroll-stopping video ads <br> for Facebook,
                     Instagram, YouTube, and TikTok – without needing a video editor.
+                </p>
+            </div>
+
+
+            <div class="typography">
+                <h1 class="h1hero">The Fastest and Easiest Way <br>to Create<span class="highlight"> High-Converting
+                    </span> <br>Video Sales Letters
+                </h1>
+
+                <p class="phero">
+                    Are you tired of relying on expensive and unreliable video <br>editors for your VSLs? Wish there was a
+                    faster, easier, and <br>more affordable way to create high-quality VSLs for your <br>Facebook ads, YouTube
+                    ads, ecommerce products, or <br>affiliate offers?
                 </p>
             </div>
 
@@ -147,7 +160,7 @@
                 <br />
                 <span class="highlight">VideoCrafter.io</span>
             </h2>
-            <p class="highlight-p">We Know How Frustrating It Can Be To Create High-Conversion Video Ads.</p>
+            <p class="highlight-p for-margg">We Know How Frustrating It Can Be To Create High-Conversion Video Ads.</p>
             <p class="highlight-p for-margin">Here's Why</p>
         </div>
         <div class="portfolio-grid">
@@ -199,12 +212,12 @@
             </div>
 
         </div>
-        <div class="portfolio-bottom-text">
+        <div class="portfolio-bottom-text for-m">
             <p>We were fed up relying on editors who couldn’t keep up, so we created VideoCrafter.io – a tool that puts
                 you in control.</p>
         </div>
 
-        
+
     </div>
     </div>
     </div>
@@ -558,7 +571,7 @@
         <div class="hiw-heading-text">
             How <span class="highlight">VideoCrafter<span style="font-size: 16px;">.io</span> <span
                     style="color: #000000;">works:</span> <span class="an-span">works:</span>
-        <div class="hiw-element-placeholder  for-mobile" style="margin-top: 48px; margin-bottom: 32px;"></div>
+                <div class="hiw-element-placeholder  for-mobile" style="margin-top: 48px; margin-bottom: 32px;"></div>
         </div>
 
         <div class="hiw-container">
@@ -686,7 +699,7 @@
             <p>We Were Fed Up Relying On Editors Who Couldn't Keep Up, So We Created VideoCrafter.lo - A Tool That Puts
                 You In Control.</p>
         </div>
-        <div class="portfolio-border"></div>  
+        <div class="portfolio-border"></div>
     </div>
     </div>
     </div>
@@ -750,9 +763,9 @@
                         </div>
 
                         <div class="price">
-                            <span><span class="bold-size">$497</span> <span class="font">/Month</span><span>
-                                    <br />
-                                    <span class="price-promo">Just $19.88 Per VIdeo</span>
+                            <span><span class="bold-size">$497</span> <span class="font">/Month</span></span>
+                            <br />
+                            <span class="price-promo">Just $19.88 Per VIdeo</span>
                         </div>
 
                         <div class="benefits">
@@ -788,9 +801,10 @@
                     <div class="p-cards-grid-item">
                         <span class="highlight g-head g-head-margin">Pro Plan</span>
                         <div class="price">
-                            <span><span class="bold-size">$997</span> <span class="font">/Month</span><span>
-                                    <br />
-                                    <span class="price-promo">Just $16.62 Per Video</span>
+                            <span><span class="bold-size">$997</span> <span class="font">/Month</span></span>
+
+                            <br />
+                            <span class="price-promo">Just $16.62 Per Video</span>
                         </div>
 
                         <div class="benefits">
@@ -873,11 +887,12 @@
         <div class="cta-main" style="background-color: white; z-index: 100;">
             <div class="cta-box">
                 <h1>Try VideoCrafter.io FREE<br>No Credit Card Required</h1>
-                <p>Get hands-on with VideoCrafter.io and experience the speed and simplicity for yourself. Stop waiting. Start creating.</p>
+                <p>Get hands-on with VideoCrafter.io and experience the speed and simplicity for yourself. Stop waiting.
+                    Start creating.</p>
             </div>
             <button class="cta-button">Get VideoCrafter Now</button>
         </div>
-        
+
 
     </div>
 
