--- a/static/landing/landing.css
+++ b/static/landing/landing.css
@@ -331,11 +331,15 @@
 
   .portfolio-box {
     max-width: 80%;
-    width: 300px;
+    /* width: 300px; */
     margin: 0 auto;
     /* height: 280px; */
   }
 
+  .sub-text p {
+    max-width: 84%;
+    margin: 0 auto;
+  }
   .portfolio-bottom-text {
     text-align: center;
     max-width: 94%;
@@ -350,7 +354,7 @@
   }
 
   .dimensions-container {
-    margin-left: -20px;
+    /* margin-left: -20px; */
   }
 
   .howitwork {
@@ -373,12 +377,14 @@
 
   .tutorial-description {
     font-size: 16px;
-    width: 361px;
+    max-width: 317px;
+    padding: 5px;
   }
 
   .video-placeholder {
-    width: 361px;
-    height: 410px;
+    width: 334px;
+    height: 390px;
+    margin: 0 auto;
   }
 
   .tutorial-container {
@@ -409,11 +415,15 @@
     font-weight: 400;
     color: #000000B3;
     text-transform: capitalize;
-    width: 361px;
+    width: 344px;
+    margin-bottom: 0px;
     line-height: 135%;
     margin-top: 11px;
   }
 
+  .for-m{
+    margin-bottom: 0px;
+  }
   .p-cards-grid-item {
     width: 300px;
     padding: 24px;
@@ -468,7 +478,54 @@
     height: 48px;
   }
 
+  .for-mobile{
+    margin-bottom: 0px !important;
+  }
   .highlight-p {
     margin-top: -0px;
   }
+  .howitworks{
+    gap: 32px;
+  }
+  .portfoliotext h2{
+    margin-top: 40px !important;
+  }
+..portfoliotext{
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+  .portfolio-bottom-text p{
+    margin: 0 auto;
+    width: 90%;
+    /* margin-bottom: 40px; */
+  }
+  .portfolio-border{
+    margin-bottom: 40px;
+  }
+  .tutorial-border {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+  .for-margg{
+    margin-top: 24px;
+    width: 80%;
+  }
+  .for-margin{
+    margin-top: -5px;
+  }
+  #heroButton{
+    margin-top: 48px;
+  }
+  .arrow {
+    top: 14px;
+  }
+  .PlaceholderContainer{
+    margin-bottom: 70px;
+  }
+
+}
+@media screen and (max-width:370px){
+    .dimensions-container{
+        max-width: 85%;
+    }
 }
