--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -112,7 +112,7 @@
         <img src="https://vlsmlsaker.s3.amazonaws.com/assets/background/Ellipse%202.svg" alt="" class="ellipse1" />
 
         <div class="top">
-            <div class="typography" style="display: none;">
+            <div class="typography typography-for-desktop">
                 <h1 class="h1hero">Create<span class="highlight"> High-Converting Video Ads </span>Within An Hour – No
                     Video Editor Required
                 </h1>
@@ -125,7 +125,7 @@
             </div>
 
 
-            <div class="typography">
+            <div class="typography typography-for-mobile">
                 <h1 class="h1hero">The Fastest and Easiest Way <br>to Create<span class="highlight"> High-Converting
                     </span> <br>Video Sales Letters
                 </h1>
