--- a/static/landing/landing.css
+++ b/static/landing/landing.css
@@ -100,6 +100,9 @@
   gap: 15px;
   align-items: center;
 }
+.typography-for-mobile{
+    display: none;
+}
 
 .aspect-box {
   width: 60px;
@@ -432,6 +435,9 @@
     display: none;
   }
 
+  .typography-for-desktop{
+    display: none;
+  }
   .cta {
     background-color: #966ae728;
     /* width: 393px; */
@@ -521,6 +527,9 @@
   }
   .PlaceholderContainer{
     margin-bottom: 70px;
+  }
+  .typography-for-mobile{
+    display: block;
   }
 
 }
