--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -131,8 +131,10 @@
                 </h1>
 
                 <p class="phero">
-                    Are you tired of relying on expensive and unreliable video <br>editors for your VSLs? Wish there was a
-                    faster, easier, and <br>more affordable way to create high-quality VSLs for your <br>Facebook ads, YouTube
+                    Are you tired of relying on expensive and unreliable video <br>editors for your VSLs? Wish there was
+                    a
+                    faster, easier, and <br>more affordable way to create high-quality VSLs for your <br>Facebook ads,
+                    YouTube
                     ads, ecommerce products, or <br>affiliate offers?
                 </p>
             </div>
