--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -697,7 +697,7 @@
                     Professional, Eye-Catching Videos In Record Time.</p>
             </div>
         </div>
-        <div class="portfolio-bottom-text">
+        <div class="portfolio-bottom-text for-m" style="margin-bottom: 40px;">
             <p>We Were Fed Up Relying On Editors Who Couldn't Keep Up, So We Created VideoCrafter.lo - A Tool That Puts
                 You In Control.</p>
         </div>
