--- a/static/landing/landing.css
+++ b/static/landing/landing.css
@@ -371,7 +371,7 @@
     }
 
     .feature-card {
-        max-width: 310px;
+        width: 310px;
         height: 280px;
     }
 
@@ -519,6 +519,9 @@
         width: 90%;
         /* margin-bottom: 40px; */
     }
+    #for-m{
+        margin-bottom: 40px;
+    }
 
     .portfolio-border {
         margin-bottom: 40px;
@@ -556,8 +559,11 @@
 
 }
 
-@media screen and (max-width:370px) {
+@media screen and (max-width:375px) {
     .dimensions-container {
         max-width: 85%;
+    }
+    .feature-card{
+        width: 260px;
     }
 }
