--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -12,6 +12,8 @@
 
     {% include 'partials/head_c.html' %}
 
+    <link rel="stylesheet" href="/static//landing/landing.css">
+    <link rel="stylesheet" href="/static/landing/style-tmp.css" />
 
     <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" />
     <link rel="stylesheet" href="{% static 'landing/landing.css' %}" />
