--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -11,7 +11,9 @@
     <meta http-equiv="Expires" content="0" />
 
     {% include 'partials/head_c.html' %}
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/static//landing/landing.css">
     <link rel="stylesheet" href="/static/landing/style-tmp.css" />
 
@@ -36,7 +38,7 @@
         <img src="{% static 'assets/background/Ellipse 2.svg' %}" alt="" class="ellipse1" />
 
         <div class="top">
-            <div class="typography">
+            div class="typography typography-for-desktop">
                 <h1 class="h1hero">Create<span class="highlight"> High-Converting Video Ads </span>Within An Hour – No
                     Video Editor Required
                 </h1>
@@ -45,6 +47,21 @@
                     Why leave your ad performance in someone else’s hands when you can do it yourself?<br>Introducing
                     VideoCrafter.io – the fastest, easiest way to create scroll-stopping video ads <br> for Facebook,
                     Instagram, YouTube, and TikTok – without needing a video editor.
+                </p>
+            </div>
+
+
+            <div class="typography typography-for-mobile">
+                <h1 class="h1hero">The Fastest and Easiest Way <br>to Create<span class="highlight"> High-Converting
+                    </span> <br>Video Sales Letters
+                </h1>
+
+                <p class="phero">
+                    Are you tired of relying on expensive and unreliable video <br>editors for your VSLs? Wish there was
+                    a
+                    faster, easier, and <br>more affordable way to create high-quality VSLs for your <br>Facebook ads,
+                    YouTube
+                    ads, ecommerce products, or <br>affiliate offers?
                 </p>
             </div>
 
@@ -72,7 +89,7 @@
                 <br />
                 <span class="highlight">VideoCrafter.io</span>
             </h2>
-            <p class="highlight-p">We Know How Frustrating It Can Be To Create High-Conversion Video Ads.</p>
+            <p class="highlight-p for-margg">We Know How Frustrating It Can Be To Create High-Conversion Video Ads.</p>
             <p class="highlight-p for-margin">Here's Why</p>
         </div>
         <div class="portfolio-grid">
@@ -586,7 +603,7 @@
                     Professional, Eye-Catching Videos In Record Time.</p>
             </div>
         </div>
-        <div class="portfolio-bottom-text">
+        <div class="portfolio-bottom-text for-m ">
             <p>We Were Fed Up Relying On Editors Who Couldn't Keep Up, So We Created VideoCrafter.lo - A Tool That Puts
                 You In Control.</p>
         </div>
@@ -606,6 +623,7 @@
     </div>
 
     <div class="pricing" id="pricing">
+        <div class="tutorial-border"></div>
         <div class="top">
             <p class="ptop-text">
                 Pricing:
@@ -726,7 +744,7 @@
                             class="p-button">Get Started</a>
                     </div>
 
-                    <div class="bottom">
+                    <!-- <div class="bottom">
                         <div class="bottom-heading">All Plans Include</div>
 
                         <div class="more-benefits">
@@ -748,7 +766,7 @@
                                 <span class="more-benefits-text">No video editing skills required</span>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
