--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -38,7 +38,7 @@
         <img src="{% static 'assets/background/Ellipse 2.svg' %}" alt="" class="ellipse1" />
 
         <div class="top">
-            div class="typography typography-for-desktop">
+            <div class="typography typography-for-desktop">
                 <h1 class="h1hero">Create<span class="highlight"> High-Converting Video Ads </span>Within An Hour – No
                     Video Editor Required
                 </h1>
@@ -604,7 +604,7 @@
             </div>
         </div>
         <div class="portfolio-bottom-text for-m ">
-            <p>We Were Fed Up Relying On Editors Who Couldn't Keep Up, So We Created VideoCrafter.lo - A Tool That Puts
+            <p class="for-marg-c">We Were Fed Up Relying On Editors Who Couldn't Keep Up, So We Created VideoCrafter.lo - A Tool That Puts
                 You In Control.</p>
         </div>
         <div class="portfolio-border"></div>
