--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -604,7 +604,7 @@
             </div>
         </div>
         <div class="portfolio-bottom-text for-m ">
-            <p class="for-marg-c">We Were Fed Up Relying On Editors Who Couldn't Keep Up, So We Created VideoCrafter.lo - A Tool That Puts
+            <p class="for-marg-c" style="margin-bottom: 40px;">We Were Fed Up Relying On Editors Who Couldn't Keep Up, So We Created VideoCrafter.lo - A Tool That Puts
                 You In Control.</p>
         </div>
         <div class="portfolio-border"></div>
