--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/static//landing/landing.css">
-    <link rel="stylesheet" href="/static/landing/style-tmp.css" />
+    <!-- <link rel="stylesheet" href="/static//landing/landing.css"> -->
+    <!-- <link rel="stylesheet" href="/static/landing/style-tmp.css" /> -->
 
     <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" /> -->
     <!-- <link rel="stylesheet" href="{% static 'landing/landing.css' %}" /> -->
@@ -83,7 +83,7 @@
 
 
     <div class="portfolio" id="Portfolio">
-        <div class="portfoliotext">
+        <div class="portfoliotext mtg" >
             <h2 class="for-marg">
                 Why We Built
                 <br />
