--- a/static/landing/landing.css
+++ b/static/landing/landing.css
@@ -211,6 +211,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: auto !important;
 }
 
 .ptop-text-mobile {
