--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -610,7 +610,7 @@
         <div class="portfolio-border"></div>
     </div>
 
-    <div class="tutorial-container">
+    <div class="tutorial-container" style="height: auto;">
         <h1 class="tutorial-title">
             <span class="title-bold">VideoCrafter</span>
             <span class="title-highlight">Tutorial</span>
