--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -12,8 +12,8 @@
 
     {% include 'partials/head_c.html' %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/static//landing/landing.css">
     <link rel="stylesheet" href="/static/landing/style-tmp.css" />
 
@@ -83,7 +83,7 @@
 
 
     <div class="portfolio" id="Portfolio">
-        <div class="portfoliotext mtg" >
+        <div class="portfoliotext mtg">
             <h2 class="for-marg">
                 Why We Built
                 <br />
@@ -604,7 +604,8 @@
             </div>
         </div>
         <div class="portfolio-bottom-text for-m ">
-            <p class="for-marg-c" style="margin-bottom: 40px;">We Were Fed Up Relying On Editors Who Couldn't Keep Up, So We Created VideoCrafter.lo - A Tool That Puts
+            <p class="for-marg-c" style="margin-bottom: 40px;">We Were Fed Up Relying On Editors Who Couldn't Keep Up,
+                So We Created VideoCrafter.lo - A Tool That Puts
                 You In Control.</p>
         </div>
         <div class="portfolio-border"></div>
