--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -857,30 +857,31 @@
         <div class="contact-section">
             <h1>Contact us</h1>
             <p>We’d love to hear from you. Please fill out this form.</p>
-            <form class="contact-form" id="contactForm">
+            <form class="contact-form" id="contactForm" autocomplete="on">
                 <div class="form-row">
                     <div class="form-group">
                         <label for="first-name">First name</label>
-                        <input type="text" id="first-name" name="first_name" placeholder="First name" required />
+                        <input type="text" id="first-name" name="first_name" placeholder="First name" autocomplete="given-name" required />
                     </div>
                     <div class="form-group">
                         <label for="last-name">Last name</label>
-                        <input type="text" id="last-name" name="last_name" placeholder="Last name" required />
+                        <input type="text" id="last-name" name="last_name" placeholder="Last name" autocomplete="family-name" required />
                     </div>
                 </div>
-
+            
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="you@company.com" required />
+                    <input type="email" id="email" name="email" placeholder="you@company.com" autocomplete="email" required />
                 </div>
-
+            
                 <div class="form-group">
                     <label for="message">Message</label>
                     <textarea id="message" name="message" placeholder="" required></textarea>
                 </div>
-
+            
                 <button type="submit">Send Message</button>
             </form>
+            
         </div>
     </div>
 
