--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -666,7 +666,7 @@
                     <div class="p-cards-grid-item mid">
                         <div class="mp">
                             <span class="highlight g-head">Growth Plan</span>
-                            <span class="hype">Most popular</span>
+                            <span class="hype">Most Popular</span>
                         </div>
 
                         <div class="price">
@@ -677,7 +677,7 @@
 
                         <div class="benefits">
                             <img src="{% static 'assets/icons/check.svg' %}" alt="" />
-                            <span class="benefits-text">Create up to 25 VSLs per month</span>
+                            <span class="benefits-text">Create up to 25 Videos per month</span>
                         </div>
                         <div class="benefits">
                             <img src="{% static 'assets/icons/check.svg' %}" alt="" />
@@ -855,7 +855,7 @@
 
     <div class="contact-section-wrapper" id="contact">
         <div class="contact-section">
-            <h1>Contact us</h1>
+            <h1>Contact Us</h1>
             <p>We’d love to hear from you. Please fill out this form.</p>
             <form class="contact-form" id="contactForm" autocomplete="on">
                 <div class="form-row">
