--- a/templates/vlc/frontend/includes/footer.html
+++ b/templates/vlc/frontend/includes/footer.html
@@ -1,4 +1,4 @@
-<div class="footer-wrapper">
+<div class="footer-wrapper" style="height: auto;">
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-branding">
