--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -644,7 +644,7 @@
                             <span><span class="bold-size">Free</span></span>
                             <br />
                             <span class="price-promo">&nbsp;</span>
-                            <p class="under-free">Test the waters before you commit.</p>
+                            <p class="under-free">Test The Waters Before You Commit.</p>
                         </div>
 
                         <div class="benefits">
@@ -672,12 +672,12 @@
                         <div class="price">
                             <span><span class="bold-size">$497</span> <span class="font">/Month</span><span>
                                     <br />
-                                    <span class="price-promo">Just $19.88 Per VIdeo</span>
+                                    <span class="price-promo">Just $19.88 Per Video</span>
                         </div>
 
                         <div class="benefits">
                             <img src="{% static 'assets/icons/check.svg' %}" alt="" />
-                            <span class="benefits-text">Create up to 25 Videos per month</span>
+                            <span class="benefits-text">Create up to 25 Videos Per Month</span>
                         </div>
                         <div class="benefits">
                             <img src="{% static 'assets/icons/check.svg' %}" alt="" />
