--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -38,7 +38,7 @@
         <img src="{% static 'assets/background/Ellipse 2.svg' %}" alt="" class="ellipse1" />
 
         <div class="top">
-            <div class="typography typography-for-desktop">
+            <div class="typography">
                 <h1 class="h1hero">Create<span class="highlight"> High-Converting Video Ads </span>Within An Hour – No
                     Video Editor Required
                 </h1>
@@ -47,21 +47,6 @@
                     Why leave your ad performance in someone else’s hands when you can do it yourself?<br>Introducing
                     VideoCrafter.io – the fastest, easiest way to create scroll-stopping video ads <br> for Facebook,
                     Instagram, YouTube, and TikTok – without needing a video editor.
-                </p>
-            </div>
-
-
-            <div class="typography typography-for-mobile">
-                <h1 class="h1hero">The Fastest and Easiest Way <br>to Create<span class="highlight"> High-Converting
-                    </span> <br>Video Sales Letters
-                </h1>
-
-                <p class="phero">
-                    Are you tired of relying on expensive and unreliable video <br>editors for your VSLs? Wish there was
-                    a
-                    faster, easier, and <br>more affordable way to create high-quality VSLs for your <br>Facebook ads,
-                    YouTube
-                    ads, ecommerce products, or <br>affiliate offers?
                 </p>
             </div>
 
