--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -19,8 +19,8 @@
 
     <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" /> -->
     <!-- <link rel="stylesheet" href="{% static 'landing/landing.css' %}" /> -->
-    <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
-    <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
+    <!-- <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" /> -->
+    <!-- <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script> -->
 
 
 </head>
@@ -937,7 +937,7 @@
         });
     </script>
 
-    <script src="{% static 'landing/script.js' %}"></script>
+    <!-- <script src="{% static 'landing/script.js' %}"></script> -->
 </body>
 
 </html>
