--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -872,7 +872,7 @@
 
     {% include "vlc/frontend/includes/footer.html" %}
 
-    <script>
+    <!-- <script>
         videojs('youtube-video-1');
         videojs('youtube-video-2');
         videojs('youtube-video-3');
@@ -886,7 +886,7 @@
         videojs('tiktok-video-1');
         videojs('tiktok-video-2');
         videojs('tiktok-video-3');
-    </script>
+    </script> -->
 
 
     <script>
