--- a/templates/vlc/frontend/landing.html
+++ b/templates/vlc/frontend/landing.html
@@ -19,8 +19,8 @@
 
     <!-- <link rel="stylesheet" href="{% static 'landing/style-tmp.css' %}" /> -->
     <!-- <link rel="stylesheet" href="{% static 'landing/landing.css' %}" /> -->
-    <!-- <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" /> -->
-    <!-- <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script> -->
+    <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
+    <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
 
 
 </head>
@@ -872,7 +872,7 @@
 
     {% include "vlc/frontend/includes/footer.html" %}
 
-    <!-- <script>
+    <script>
         videojs('youtube-video-1');
         videojs('youtube-video-2');
         videojs('youtube-video-3');
@@ -886,7 +886,7 @@
         videojs('tiktok-video-1');
         videojs('tiktok-video-2');
         videojs('tiktok-video-3');
-    </script> -->
+    </script>
 
 
     <script>
@@ -937,7 +937,7 @@
         });
     </script>
 
-    <!-- <script src="{% static 'landing/script.js' %}"></script> -->
+    <script src="{% static 'landing/script.js' %}"></script>
 </body>
 
 </html>
